tests/lean/858.lean.expected.out
858.lean:2:18: error: don't know how to synthesize placeholder
context:
⊢ Type ?
858.lean:2:18: error: elaborator failed
